# python-freebox

./: .gitignore  README.md  pyproject.toml  setup_env.sh
docs/: status.md
examples/: run_all  test_airmedia  test_call  test_camera  test_client  test_connection  test_contact  test_dhcp  test_dhcpv6  test_discovery  test_downloads  test_events  test_firewall  test_freeplug  test_fs  test_ftp  test_home  test_lan  test_lang  test_lcd  test_ledstrip  test_netcontrol  test_netshare  test_notif  test_player  test_profile  test_pvr  test_raid  test_rrd  test_sfp  test_sharelink  test_standby  test_storage  test_switch  test_system  test_tftp  test_update  test_upload  test_upnpav  test_upnpigd  (+3 more)
tests/: conftest.py  test_airmedia.py  test_auth.py  test_call.py  test_camera.py  test_client.py  test_connection.py  test_contact.py  test_dhcp.py  test_dhcpv6.py  test_discovery.py  test_downloads.py  test_events.py  test_firewall.py  test_freeplug.py  test_fs.py  test_ftp.py  test_home.py  test_lan.py  test_lang.py  test_lcd.py  test_ledstrip.py  test_netcontrol.py  test_netshare.py  test_notif.py  test_player.py  test_profile.py  test_pvr.py  test_raid.py  test_rrd.py  test_sfp.py  test_sharelink.py  test_standby.py  test_storage.py  test_store.py  test_switch.py  test_system.py  test_tftp.py  test_update.py  test_upload.py  (+5 more)
tools/: scrape_doc  test_airmedia  test_client  test_contact  test_downloads  test_freeplug  test_ftp  test_home  test_lan  test_lcd  test_ledstrip  test_notif  test_pvr  test_raid  test_sharelink  test_standby  test_switch  test_system  test_tftp  test_vpn  (+1 more)
(+53 files in other folders)
