[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freebox"
version = "0.1.0"
description = "Python client library for the Freebox API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
mdns = ["zeroconf>=0.131"]
dns  = ["dnspython>=2.6"]
dev  = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "zeroconf>=0.131",
    "dnspython>=2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/freebox"]
